# Spotter

./: .env.example  README.md  docker-compose.yaml  dockerfile  entry-point.sh  express.md  pyproject.toml  v1.md  v2.md
gasstation/: apps.py  models.py
gasstation/management/commands/: import_gasstations.py
gasstation/migrations/: 0001_initial.py
navigation/: serlaizers.py  urls.py  views.py
navigation/api/v1/: serializers.py  urls.py  views.py
navigation/api/v2/: serializers.py  urls.py  views.py
navigation/services/: __init__.py  converter.py  geocoding.py  helper.py  map_renderer.py  optimizer.py  provider_call.py  stations.py
navigation/tests/: test_optimizer.py  test_stations.py
spotter/: asgi.py  settings.py  urls.py  wsgi.py
