[project]
name = "spotter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.1",
    "geopy>=2.4.1",
    "polyline>=2.0.4",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "requests>=2.32.0",
    "staticmap>=0.5.7",
    "uvicorn>=0.40.0",
]
